--- a/amplify/backend/auth/ServerlessWebApp/ServerlessWebApp-cloudformation-template.yml
+++ b/amplify/backend/auth/ServerlessWebApp/ServerlessWebApp-cloudformation-template.yml
@@ -52,10 +52,10 @@ Parameters:
         
   userpoolClientGenerateSecret:
     Type: String
-                
+            
   userpoolClientRefreshTokenValidity:
-    Type: Number
-                  
+    Type: String
+                      
   userpoolClientWriteAttributes:
     Type: CommaDelimitedList
               
@@ -115,7 +115,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'serverea3c2f4e_sns-role', !Join ['',[ 'sns', 'undefined', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'Serverc7cd255d_sns-role', !Join ['',[ 'sns', 'undefined', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -127,10 +127,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: serverea3c2f4e_role_external_id
+                sts:ExternalId: Serverc7cd255d_role_external_id
       Policies: 
         - 
-          PolicyName: serverea3c2f4e-sns-policy
+          PolicyName: Serverc7cd255d-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -188,7 +188,7 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: serverea3c2f4e_role_external_id
+        ExternalId: Serverc7cd255d_role_external_id
     
   
     
@@ -208,7 +208,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: serverea3c2f4e_app_clientWeb
+      ClientName: Serverc7cd255d_app_clientWeb
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -221,7 +221,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: serverea3c2f4e_app_client
+      ClientName: Serverc7cd255d_app_client
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -289,7 +289,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: serverea3c2f4e_userpoolclient_lambda_iam_policy
+      PolicyName: Serverc7cd255d_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -306,7 +306,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: serverea3c2f4e_userpoolclient_lambda_log_policy
+      PolicyName: Serverc7cd255d_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
