--- a/amplify/backend/auth/serverlessapp/serverlessapp-cloudformation-template.yml
+++ b/amplify/backend/auth/serverlessapp/serverlessapp-cloudformation-template.yml
@@ -9,6 +9,18 @@ Parameters:
     Type: String
   
   
+  
+  
+  functionserverlessappPostConfirmationArn: 
+    Type: String
+    Default: functionserverlessappPostConfirmationArn
+  
+  functionserverlessappPostConfirmationName: 
+    Type: String
+    Default: functionserverlessappPostConfirmationName
+  
+  
+  
 
     
   resourceNameTruncated:
@@ -52,10 +64,10 @@ Parameters:
         
   userpoolClientGenerateSecret:
     Type: String
-                
+            
   userpoolClientRefreshTokenValidity:
-    Type: Number
-                  
+    Type: String
+                      
   userpoolClientWriteAttributes:
     Type: CommaDelimitedList
               
@@ -94,7 +106,7 @@ Parameters:
                     
   userPoolGroupList:
     Type: CommaDelimitedList
-                                                
+                                    
   parentStack:
     Type: String
                 
@@ -103,7 +115,7 @@ Parameters:
               
   dependsOn:
     Type: CommaDelimitedList
-    
+                
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
 
@@ -167,6 +179,19 @@ Resources:
         
       
       
+      LambdaConfig:
+        
+        
+        
+        
+        
+          PostConfirmation: !Ref functionserverlessappPostConfirmationArn
+        
+        
+        
+        
+        
+      
       
       AutoVerifiedAttributes: !Ref autoVerifiedAttributes
       
@@ -178,9 +203,9 @@ Resources:
         PasswordPolicy:
           MinimumLength: !Ref passwordPolicyMinLength
           RequireLowercase: false
-          RequireNumbers: false
+          RequireNumbers: true
           RequireSymbols: false
-          RequireUppercase: false
+          RequireUppercase: true
       
       UsernameAttributes: !Ref usernameAttributes
           
@@ -195,12 +220,53 @@ Resources:
     
   
     
+  
+  UserPoolPostConfirmationLambdaInvokePermission: 
+    Type: "AWS::Lambda::Permission"
+    DependsOn: UserPool
+    Properties: 
+      Action: "lambda:invokeFunction"
+      Principal: "cognito-idp.amazonaws.com"
+      FunctionName: !Ref functionserverlessappPostConfirmationName
+      SourceArn: !GetAtt UserPool.Arn
     
   
   
    
     
   # Updating lambda role with permissions to Cognito
+  
+  
+  serverlessappPostConfirmationAddToGroupCognito:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: serverlessappPostConfirmationAddToGroupCognito
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Action:
+            
+              - cognito-idp:AdminAddUserToGroup
+            
+              - cognito-idp:GetGroup
+            
+              - cognito-idp:CreateGroup
+            
+            
+            
+            Resource: !GetAtt
+            
+              - UserPool
+            
+              - Arn
+            
+            
+            
+
+      Roles:
+        - !Join ['',["serverlessappPostConfirmation", '-', !Ref env]]
+  
   
   
   UserPoolClientWeb:
