--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^0.2.7",
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.4.0",
     "@types/jest": "^25.2.3",
+    "@types/material-ui": "^0.21.7",
     "@types/node": "^14.0.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
