--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/core": "^3.3.3",
     "@aws-amplify/ui-react": "^0.2.7",
     "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^5.8.0",
