WIP verification process

--- a/amplify/backend/auth/serverlessapp/serverlessapp-cloudformation-template.yml
+++ b/amplify/backend/auth/serverlessapp/serverlessapp-cloudformation-template.yml
@@ -202,9 +202,9 @@ Resources:
       Policies:
         PasswordPolicy:
           MinimumLength: !Ref passwordPolicyMinLength
-          RequireLowercase: false
+          RequireLowercase: true
           RequireNumbers: true
-          RequireSymbols: false
+          RequireSymbols: true
           RequireUppercase: true
       
       UsernameAttributes: !Ref usernameAttributes
