--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@aws-amplify/core": "^3.4.2",
     "@aws-amplify/ui-react": "^0.2.11",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.5",
     "@testing-library/user-event": "^12.0.11",
