--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/core": "^3.4.5",
-    "@aws-amplify/ui-react": "^0.2.14",
+    "@aws-amplify/core": "^3.4.6",
+    "@aws-amplify/ui-react": "^0.2.15",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^5.11.2",
+    "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.8",
-    "@testing-library/user-event": "^12.1.0",
-    "@types/jest": "^26.0.9",
-    "@types/material-ui": "^0.21.7",
-    "@types/node": "^14.0.27",
-    "@types/react": "^16.9.44",
+    "@testing-library/user-event": "^12.1.1",
+    "@types/jest": "^26.0.10",
+    "@types/material-ui": "^0.21.8",
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "@types/yup": "^0.29.4",
-    "amazon-cognito-identity-js": "^4.3.3",
-    "aws-amplify": "^3.0.23",
+    "@types/yup": "^0.29.6",
+    "amazon-cognito-identity-js": "^4.3.4",
+    "aws-amplify": "^3.0.24",
     "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "typescript": "~3.9.7",
+    "react-scripts": "3.4.3",
+    "typescript": "^3.9.7",
     "yup": "^0.29.3"
   },
   "scripts": {
@@ -49,13 +49,13 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
-    "eslint-plugin-react-hooks": "^4.0.8"
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0"
   }
 }
