--- a/amplify/backend/auth/serverlessApp/serverlessApp-cloudformation-template.yml
+++ b/amplify/backend/auth/serverlessApp/serverlessApp-cloudformation-template.yml
@@ -9,18 +9,6 @@ Parameters:
     Type: String
   
   
-  
-  
-  functionserverlessappPostConfirmationArn: 
-    Type: String
-    Default: functionserverlessappPostConfirmationArn
-  
-  functionserverlessappPostConfirmationName: 
-    Type: String
-    Default: functionserverlessappPostConfirmationName
-  
-  
-  
 
     
   resourceNameTruncated:
@@ -80,13 +68,16 @@ Parameters:
   userpoolClientSetAttributes:
     Type: String
             
-  useDefault:
+  sharedId:
+    Type: String
+              
+  resourceName:
     Type: String
               
   authSelections:
     Type: String
-              
-  resourceName:
+                                      
+  useDefault:
     Type: String
                       
   usernameAttributes:
@@ -106,7 +97,10 @@ Parameters:
                     
   userPoolGroupList:
     Type: CommaDelimitedList
-                                    
+                  
+  serviceName:
+    Type: String
+                    
   parentStack:
     Type: String
                 
@@ -115,7 +109,7 @@ Parameters:
               
   dependsOn:
     Type: CommaDelimitedList
-                
+    
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
 
@@ -127,7 +121,7 @@ Resources:
   # Created to allow the UserPool SMS Config to publish via the Simple Notification Service during MFA Process
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, 'serverea3c2f4e_sns-role', !Join ['',[ 'sns', 'undefined', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, 'server9c0f3151_sns-role', !Join ['',[ 'sns', '9c0f3151', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument: 
         Version: "2012-10-17"
         Statement: 
@@ -139,10 +133,10 @@ Resources:
               - "sts:AssumeRole"
             Condition: 
               StringEquals:
-                sts:ExternalId: serverea3c2f4e_role_external_id
+                sts:ExternalId: server9c0f3151_role_external_id
       Policies: 
         - 
-          PolicyName: serverea3c2f4e-sns-policy
+          PolicyName: server9c0f3151-sns-policy
           PolicyDocument: 
             Version: "2012-10-17"
             Statement: 
@@ -179,19 +173,6 @@ Resources:
         
       
       
-      LambdaConfig:
-        
-        
-        
-        
-        
-          PostConfirmation: !Ref functionserverlessappPostConfirmationArn
-        
-        
-        
-        
-        
-      
       
       AutoVerifiedAttributes: !Ref autoVerifiedAttributes
       
@@ -213,22 +194,13 @@ Resources:
       SmsVerificationMessage: !Ref smsVerificationMessage
       SmsConfiguration: 
         SnsCallerArn: !GetAtt SNSRole.Arn
-        ExternalId: serverea3c2f4e_role_external_id
+        ExternalId: server9c0f3151_role_external_id
     
   
     
     
   
     
-  
-  UserPoolPostConfirmationLambdaInvokePermission: 
-    Type: "AWS::Lambda::Permission"
-    DependsOn: UserPool
-    Properties: 
-      Action: "lambda:invokeFunction"
-      Principal: "cognito-idp.amazonaws.com"
-      FunctionName: !Ref functionserverlessappPostConfirmationName
-      SourceArn: !GetAtt UserPool.Arn
     
   
   
@@ -237,44 +209,12 @@ Resources:
   # Updating lambda role with permissions to Cognito
   
   
-  serverlessappPostConfirmationAddToGroupCognito:
-    Type: AWS::IAM::Policy
-    Properties:
-      PolicyName: serverlessappPostConfirmationAddToGroupCognito
-      PolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Action:
-            
-              - cognito-idp:AdminAddUserToGroup
-            
-              - cognito-idp:GetGroup
-            
-              - cognito-idp:CreateGroup
-            
-            
-            
-            Resource: !GetAtt
-            
-              - UserPool
-            
-              - Arn
-            
-            
-            
-
-      Roles:
-        - !Join ['',["serverlessappPostConfirmation", '-', !Ref env]]
-  
-  
-  
   UserPoolClientWeb:
   # Created provide application access to user pool
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: serverea3c2f4e_app_clientWeb
+      ClientName: server9c0f3151_app_clientWeb
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -287,7 +227,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: serverea3c2f4e_app_client
+      ClientName: server9c0f3151_app_client
       
       ReadAttributes: !Ref userpoolClientReadAttributes
       WriteAttributes: !Ref userpoolClientWriteAttributes
@@ -301,7 +241,7 @@ Resources:
   # Created to execute Lambda which gets userpool app client config values
     Type: 'AWS::IAM::Role'
     Properties:
-      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', 'undefined', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
+      RoleName: !If [ShouldNotCreateEnvResources, !Ref userpoolClientLambdaRole, !Join ['',['upClientLambdaRole', '9c0f3151', !Select [3, !Split ['-', !Ref 'AWS::StackName']], '-', !Ref env]]]
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -355,7 +295,7 @@ Resources:
   # Marked as depending on UserPoolClientRole for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: serverea3c2f4e_userpoolclient_lambda_iam_policy
+      PolicyName: server9c0f3151_userpoolclient_lambda_iam_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
@@ -372,7 +312,7 @@ Resources:
   # Marked as depending on UserPoolClientLambdaPolicy for easier to understand CFN sequencing
     Type: 'AWS::IAM::Policy'
     Properties:
-      PolicyName: serverea3c2f4e_userpoolclient_lambda_log_policy
+      PolicyName: server9c0f3151_userpoolclient_lambda_log_policy
       Roles: 
         - !Ref UserPoolClientRole
       PolicyDocument:
